--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-.env
+# macOS
+.DS_Store
+
+# Python
+.venv/
 venv/
-venv312/
 __pycache__/
+*.py[cod]
+*.so
+.mypy_cache/
+.pytest_cache/
+.coverage*
+htmlcov/
+dist/
+build/
+.eggs/
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Env files
+.env
+*.env
+.env.*
