--- a/res_dicts_reasoning_mc_aop.json
+++ b/res_dicts_reasoning_mc_aop.json
@@ -86,5 +86,49 @@
       "coef": -0.3901917801297882,
       "p": 0.09549202448209487
     }
+  },
+  "llama-3.3-70b-instruct": {
+    "team_acc_lift": {
+      "lift": 0.0,
+      "ci_lo": -0.04635240944435942,
+      "ci_hi": 0.046352409444359366
+    },
+    "introspection_score": {
+      "mcc": 0.06423347332215357,
+      "p": 0.164
+    },
+    "self_acc_lift": {
+      "lift": 0.025727069351230425,
+      "p": 0.39617411072536657
+    },
+    "normed_self_acc_lift": {
+      "lift": 0.048936170212765966,
+      "ci_lo": -0.06295369211514396,
+      "ci_hi": 0.16082603254067587
+    },
+    "single_point_auc": {
+      "auc": 0.1288355334111695,
+      "ci_lo": -0.0568166199736177,
+      "ci_hi": 0.3144876867959567
+    },
+    "full_auc": {
+      "auc": 0.5752100840336134,
+      "ci_lo": 0.5223680282687709,
+      "ci_hi": 0.630019839746636
+    },
+    "calibration_auc": {
+      "auc": 0.6932055399437976,
+      "ci_lo": 0.6465608748624238,
+      "ci_hi": 0.7397648634943219
+    },
+    "calibration_entropy_auc": {
+      "auc": 0.6948113207547171,
+      "ci_lo": 0.6471948679427902,
+      "ci_hi": 0.7413965737888224
+    },
+    "s_i_capability": {
+      "coef": -0.20608616370823618,
+      "p": 0.31664117840518113
+    }
   }
 }
